--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "graphql": "^16.6.0",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
